# ytLocalPlaylist

./: .gitignore  CMakeLists.txt  art.py  artist.py  config.py  dbschema.json  edict.py  lastfm.py  log.py  main.py  meta.py  playlist.py  readme.md  requirements.txt  scribe.py  songdb.py  util.py
3p/: CMakeLists.txt
3p/Catch2/: CMakeLists.txt
3p/Raylib/: CMakeLists.txt
3p/json/: CMakeLists.txt
3p/raylib-cpp/: CMakeLists.txt
3p/tiny-process/: CMakeLists.txt
3p/wxWidgets/: CMakeLists.txt
src/: AppFrame.cpp  AppFrame.h  CMakeLists.txt  SongMetaData.cpp  SongMetaData.h  main.cpp
src/ui/: Button.cpp  Button.h  Button.hpp
tests/: CMakeLists.txt  SongMetaDataTest.cpp
