if (YTLP-USE_BUNDLED_CATCH)
    FetchContent_MakeAvailable(Catch2)
else()
    find_package(Catch2 3.1 REQUIRED)
endif()
set(TEST_SRCS SongMetaDataTest.cpp)

add_executable(run_tests ${TEST_SRCS})
target_link_libraries(run_tests PRIVATE ytlp-lib Catch2::Catch2WithMain)
target_compile_options(ytlp-lib PRIVATE --coverage)
target_link_options(run_tests PRIVATE --coverage)
target_include_directories(run_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
